<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/open_file"
        android:icon="@drawable/open"
        android:title="Open File"
        app:showAsAction="always" />
    <item
        android:id="@+id/save_file"
        android:icon="@drawable/save"
        android:title="Save File"
        app:showAsAction="always" />
    <item
        android:id="@+id/run_script"
        android:icon="@drawable/play"
        android:title="Run"
        app:showAsAction="always" />
    <item android:title="@string/cursor_actions">
        <menu>
            <item
                android:id="@+id/goto_end"
                android:title="@string/go_to_end" />
            <item
                android:id="@+id/move_up"
                android:title="@string/move_up" />
            <item
                android:id="@+id/move_down"
                android:title="@string/move_down" />
            <item
                android:id="@+id/move_left"
                android:title="@string/move_left" />
            <item
                android:id="@+id/move_right"
                android:title="@string/move_right" />
            <item
                android:id="@+id/home"
                android:title="@string/home" />
            <item
                android:id="@+id/end"
                android:title="@string/end" />
        </menu>
    </item>
    <item android:title="@string/search_text">
        <menu>
            <item
                android:id="@+id/search_am"
                android:title="@string/action_mode" />
            <item
                android:id="@+id/search_panel_st"
                android:checkable="true"
                android:title="@string/search_panel" />
        </menu>
    </item>
    <item android:title="@string/feature_switches">
        <menu>
            <item
                android:id="@+id/text_wordwrap"
                android:checkable="true"
                android:title="@string/wordwrap" />
            <item
                android:id="@+id/editor_line_number"
                android:checkable="true"
                android:checked="true"
                android:title="@string/line_number_visibility" />
            <item
                android:id="@+id/pin_line_number"
                android:checkable="true"
                android:title="@string/pin_line_number" />
            <item
                android:id="@+id/magnifier"
                android:checkable="true"
                android:checked="true"
                android:title="@string/magnifier" />
            <item
                android:id="@+id/useIcu"
                android:checkable="true"
                android:checked="true"
                android:title="@string/use_icu_library" />
            <item
                android:id="@+id/completionAnim"
                android:checkable="true"
                android:checked="true"
                android:title="@string/open_completion_window_animation" />
        </menu>
    </item>

    <item
        android:id="@+id/switch_colors"
        android:title="@string/switch_color_scheme" />

    <item
        android:id="@+id/open_test_activity"
        android:title="@string/open_new_activity" />
    <item
        android:id="@+id/text_undo"
        android:icon="@drawable/undo"
        android:title="@string/undo"
        app:showAsAction="always" />
    <item
        android:id="@+id/text_redo"
        android:icon="@drawable/redo"
        android:title="@string/redo"
        app:showAsAction="always" />
</menu>