<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/search_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="gotoLast"
                    android:text="@string/layout_tv_last"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="gotoNext"
                    android:text="@string/layout_tv_next"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="replace"
                    android:text="@string/layout_tv_replace"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="replaceAll"
                    android:text="@string/layout_tv_replaceAll"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showSearchOptions"
                    android:text="@string/layout_tv_search_options"
                    android:id="@+id/search_options"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

        </HorizontalScrollView>


        <EditText
            android:id="@+id/search_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_to_search" />

        <EditText
            android:id="@+id/replace_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/replacement" />

    </LinearLayout>

    <com.termux.view.TerminalView
        android:id="@+id/terminal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        android:scrollbarThumbHorizontal="@drawable/scrollbar_thumb"
        android:scrollbarThumbVertical="@drawable/scrollbar_thumb"
        android:scrollbarTrackHorizontal="@drawable/scrollbar_track"
        android:scrollbarTrackVertical="@drawable/scrollbar_track"
        app:lnPanelPosition="center"
        app:lnPanelPositionMode="follow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="-56dp"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <io.github.rosemoe.sora.widget.SymbolInputView
                android:id="@+id/symbol_input"
                android:layout_width="wrap_content"
                android:layout_height="40dp" >

                <ImageButton
                    android:id="@+id/go_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/undo" />

                <ImageButton
                    android:id="@+id/stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_menu_close_clear_cancel" />
            </io.github.rosemoe.sora.widget.SymbolInputView>

        </HorizontalScrollView>


    </LinearLayout>

</LinearLayout>
