<?xml version="1.0" encoding="utf-8"?><!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~    sora-editor - the awesome code editor for Android
  ~    https://github.com/Rosemoe/sora-editor
  ~    Copyright (C) 2020-2023  Rosemoe
  ~
  ~     This library is free software; you can redistribute it and/or
  ~     modify it under the terms of the GNU Lesser General Public
  ~     License as published by the Free Software Foundation; either
  ~     version 2.1 of the License, or (at your option) any later version.
  ~
  ~     This library is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  ~     Lesser General Public License for more details.
  ~
  ~     You should have received a copy of the GNU Lesser General Public
  ~     License along with this library; if not, write to the Free Software
  ~     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301
  ~     USA
  ~
  ~     Please contact Rosemoe by email 2073412493@qq.com if you need
  ~     additional information or have any questions
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:id="@+id/search_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

        <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="closeSearchPanel"
                        android:text="@string/close" />

                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="gotoLast"
                        android:text="@string/layout_tv_last" />

                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="gotoNext"
                        android:text="@string/layout_tv_next" />

                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="replace"
                        android:text="@string/layout_tv_replace" />

                <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="replaceAll"
                        android:text="@string/layout_tv_replaceAll" />

                <Button
                        android:id="@+id/search_options"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/layout_tv_search_options" />

            </LinearLayout>

        </HorizontalScrollView>


        <EditText
                android:id="@+id/search_editor"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:hint="@string/text_to_search"
                android:inputType="text" />

        <EditText
                android:id="@+id/replace_editor"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:hint="@string/replacement"
                android:inputType="text" />

    </LinearLayout>

    <io.github.rosemoe.sora.widget.CodeEditor
            android:id="@+id/editor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:scrollbarThumbHorizontal="@drawable/scrollbar_thumb"
            android:scrollbarThumbVertical="@drawable/scrollbar_thumb"
            android:scrollbarTrackHorizontal="@drawable/scrollbar_track"
            android:scrollbarTrackVertical="@drawable/scrollbar_track"
            app:lnPanelPosition="center"
            app:lnPanelPositionMode="follow" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="-40dp"
            android:orientation="vertical">

        <HorizontalScrollView
                android:contentDescription="@string/symbol_keyboard"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                tools:ignore="UselessParent">

            <io.github.rosemoe.sora.widget.SymbolInputView
                    android:id="@+id/symbol_input"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp" />

        </HorizontalScrollView>


    </LinearLayout>

</LinearLayout>
